Added more info to table
Added info to main event and Anual

--- a/sponsor.html
+++ b/sponsor.html
@@ -148,64 +148,269 @@
 									<table class="all-100" >
 										<thead>
 											<tr>
-												<th>Sponsor</th>
-									            <th>Partner</th>    
-									            <th>Premium</th>
-									            <th>Exclusive</th>
+									            <th class="all-40">Description</th>
+									            <th class="all-15">Sponsor</th>
+									            <th class="all-15">Partner</th>
+									            <th class="all-15">Premium</th>
+									            <th class="all-15">Exclusive</th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr class="linha">
-									            <td>Eve</td>
-									            <td>Jackson</td>    
-									            <td>94</td>
-									            <td>50</td>
+									            <td>Post(s) (Personalizado) Redes Sociais</td>
+									            <td>-</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5">
+									              	<div id="folders-doc-info" class="info shadow">
+														<h3>Post(s) (Personalizado) Redes Sociais</h3>
+														<p>
+															Colocação de um ou mais posts, personalizados de acordo com os critérios da empresa, nas redes sociais da SINFO.
+														</p>
+													</div>
+									              </td>
+									            </tr>
 									          </tr>
 									          <tr class="linha impar">
-									            <td>John</td>
-									            <td>Doe</td>    
-									            <td>80</td>
-									            <td>50</td>
+									            <td>Patrocinar Workshop</td>
+									            <td>-</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5">
+									              	<div id="folders-doc-info" class="info shadow">
+														<h3>Patrocinar Workshop </h3>
+														<p>
+															Patrocínio de um ou mais dos workshops organizados pela SINFO durante 1 ano.
+														</p>
+													</div>
+									              </td>
+									            </tr>
 									          </tr>
 									          <tr class="linha">
-									            <td>John</td>
-									            <td>Doe</td>    
-									            <td>80</td>
-									            <td>50</td>
+									            <td>Logo Rollups Anual</td>
+									            <td>-</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5">
+									              	<div id="folders-doc-info" class="info shadow">
+														<h3>Meetup ao final do dia</h3>
+														<p>
+															Possibilidade de colocar o logo no rollup da SINFO que estará presente em todos os eventos organizados pela SINFO durante 1 ano.
+														</p>
+													</div>
+									              </td>
+									            </tr>
 									          </tr>
 										</tbody>
 									</table>
 								</div>
-							<p class="heading">Semana SINFO</p> 
+							<p class="heading">Main Event</p> 
 							    <div class="content" style="display: block; padding: 0 0; margin: 0 0; text-align: center;" > 
 							       <table class="all-100" style="text-align: center;">
 							       		<thead>
 						       				<tr>
-									            <th>Silver</th>
-									            <th>Gold</th>    
-									            <th>Platinum</th>
-									            <th>Diamond</th>
+									            <th class="all-40">Description</th>
+									            <th class="all-15">Silver</th>
+									            <th class="all-15">Gold</th>
+									            <th class="all-15">Platinum</th>
+									            <th class="all-15">Diamond</th>
 									        </tr>
 							       		</thead>
 							       		<tbody>
 							       			<tr class="linha">
-									            <td>Eve</td>
-									            <td>Jackson</td>    
-									            <td>94</td>
-									            <td>50</td>
+									            <td>Patrocinio de Palestra</td>
+									            <td>S</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" >
+									              <td colspan="5" class="noPadding">
+								              		<div id="patrocinio-palestra-info" class="info shadow">
+														<h3>Patrocionio de Palestra</h3>
+														<p>
+															Referência à empresa no ínicio e fim da palestra, logo nos materiais a referir “sponsored by” e logo fixo no stream. Outras formas de patrocínio da palestra poderão ser consideradas com a organização.
+														</p>
+														<div class="column-group push-center quarter-bottom-space">
+															<img src="img/sponsors/palestra.jpg">
+														</div>
+													</div>
+													</td>
+									            </tr>
 									          </tr>
 									          <tr class="linha impar">
-									            <td>John</td>
-									            <td>Doe</td>    
-									            <td>80</td>
-									            <td>50</td>
+									            <td>Apresentação</td>
+									            <td>S</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5" class="noPadding">
+								              		<div id="apresentacao-info" class="info shadow" style="clear: both !important;">
+														<h3>Apresentação</h3>
+														<p>
+															Apresentação da empresa para uma plateia de alunos que visitam o evento.
+															Permitem que a empresa dê a conhecer aos alunos a sua área de trabalho, os projectos em que estão envolvidos e oportunidades de emprego que existem na empresa.
+														</p>
+														<ul style="list-style-type:disc;">
+															<li>É uma sessão de 45 minutos divididos da seguinte maneira:</li>
+															<ol>
+															<li>5 minutos para a empresa se dar a conhecer.</li>
+															<li>
+															30 minutos de apresentação (Preferência por oradores Engenheiros e ex-alunos de LEIC/IST)</li>
+															<li>Apresentações semi-técnicas costumam ser preferidos pelos alunos.</li>
+															<li>10 minutos para perguntas e respostas.</li>
+
+															</ol>
+															<li>Nas salas do Centro de Congressos (com capacidade para 50 ou 70 lugares).</li>
+														</ul>
+														<div class="column-group push-center quarter-bottom-space">
+															<img src="img/sponsors/orador-apresentacao.jpg">
+														</div><div class="column-group push-center quarter-bottom-space">
+															<img src="img/sponsors/publico-apresentacao.jpg">
+														</div>
+													</div>
+													</td>
+									            </tr>
 									          </tr>
 									          <tr class="linha">
-									            <td>John</td>
-									            <td>Doe</td>    
-									            <td>80</td>
-									            <td>50</td>
+									            <td>Stand X dias Y Locais</td>
+									            <td>S</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5" class="noPadding">
+								              		<div id="stands-info" class="info shadow">
+														<h3>Stand X dias Y Locais </h3>
+														<p>
+															Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+														</p>
+														<li>Dimensões 3 x 3 x 2,5 metros</li>
+														<li>Alcatifado.</li>
+														<li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
+														<li>Ficha electrica tripla.</li>
+														<li>3 focos de luz.</li>
+														<li>Lettering com o nome da empresa.</li>
+														<li>2 mesas</li>
+														<li>2 cadeiras</li>
+														<div class="column-group push-center quarter-bottom-space">
+															<img src="img/sponsors/stand_1.jpg">
+														</div>
+														<div class="column-group push-center quarter-bottom-space">
+															<img src="img/sponsors/MapaStandsCivil.jpg">
+														</div>
+													</div>
+													</td>
+									            </tr>
+									            <tr class="linha impar">
+									            <td>Dar Workshop</td>
+									            <td>-</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5">
+									              	<div id="folders-doc-info" class="info shadow">
+														<h3>Dar Workshop</h3>
+														<p>
+															Possibilidade de dar um Workshop a uma plateia de alunos que visitam o evento.
+														</p>
+													</div>
+									              </td>
+									            </tr>
 									          </tr>
+									          <tr class="linha">
+									            <td>Patrocinar Workshop</td>
+									            <td>-</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5">
+									              	<div id="folders-doc-info" class="info shadow">
+														<h3>Patrocinar Workshop</h3>
+														<p>
+															Patrocínio de um dos Workshops organizados pela SINFO durante o evento.
+														</p>
+													</div>
+									              </td>
+									            </tr>
+									          </tr>
+									          <tr class="linha impar">
+									            <td>Post(s) (Personalizado) Redes Sociais</td>
+									            <td>-</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5">
+									              	<div id="folders-doc-info" class="info shadow">
+														<h3>Post(s) (Personalizado) Redes Sociais</h3>
+														<p>
+															Colocação de um ou mais posts, personalizados de acordo com os critérios da empresa, nas redes sociais da SINFO.
+														</p>
+													</div>
+									              </td>
+									            </tr>
+									          </tr>
+									          <tr class="linha">
+									            <td>Pitch in-between talks</td>
+									            <td>-</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5">
+									              	<div id="folders-doc-info" class="info shadow">
+														<h3>Pitch in-between talks</h3>
+														<p>
+															Realização de uma pitch de apresentação da empresa ou de um tema à escolha durante os intervalos entre as palestras.
+														</p>
+													</div>
+									              </td>
+									            </tr>
+									          </tr>
+									          <tr class="linha impar">
+									            <td>Actividade personalizada</td>
+									            <td>-</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5">
+									              	<div id="folders-doc-info" class="info shadow">
+														<h3>Actividade personalizada</h3>
+														<p>
+															A empresa poderá sugerir e acordar com a SINFO a realização de uma actividade personalizada, moldada aos interesses da empresa, durante o evento.
+														</p>
+													</div>
+									              </td>
+									            </tr>
+									          </tr>
+									          <tr class="linha">
+									            <td>Meetup ao final do dia</td>
+									            <td>-</td>
+									            <td>M</td>    
+									            <td>L</td>
+									            <td>XL</td>
+									            <tr class="descricao" style="display: none;">
+									              <td colspan="5">
+									              	<div id="folders-doc-info" class="info shadow">
+														<h3>Meetup ao final do dia</h3>
+														<p>
+															Realização de um encontro informal com alguns dos participantes, no final de um dos dias do evento.
+														</p>
+													</div>
+									              </td>
+									            </tr>
+									          </tr>
+								          	</tr>
 							       		</tbody>
 							       </table>
 							    </div> 
