Update Sponsor and style

--- a/sponsor.html
+++ b/sponsor.html
@@ -31,7 +31,8 @@
 		<![endif]-->
 
 		<!-- test browser flexbox support and load legacy grid if unsupported -->
-		<script type="text/javascript" src="js/vendor/ink/modernizr.js"></script>
+		<script type="text/javascript" src="js/vendor/
+		ink/modernizr.js"></script>
 		<script type="text/javascript">
 			Modernizr.load({
 				test: Modernizr.flexbox,
@@ -45,7 +46,7 @@
 		<script type="text/javascript" src="js/vendor/ink/autoload.js"></script>
 
 		<!-- my stuff -->
-		<link rel="stylesheet" type="text/css" href="css/sponsors/styless.css">
+		<link rel="stylesheet" type="text/css" href="css/sponsors/styles.css">
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script type="text/javascript" src="js/sponsors/jquery.scrollTo.min.js"></script>
 		<script type="text/javascript" src="js/sponsors/jquery.localScroll.min.js"></script>
