--- a/sponsor.html
+++ b/sponsor.html
@@ -131,25 +131,25 @@
 							<table class="all-100 medium-100 small-100 tiny-100">
 								<thead>
 									<tr>
-							            <th class="all-40">Description</th>
-							            <th class="all-15">Sponsor</th>
-							            <th class="all-15">Partner</th>
-							            <th class="all-15">Premium</th>
-							            <th class="all-15">Exclusive</th>
+				            <th class="all-40">Description</th>
+				            <th class="all-15">Sponsor</th>
+				            <th class="all-15">Partner</th>
+				            <th class="all-15">Premium</th>
+				            <th class="all-15">Exclusive</th>
 									</tr>
 								</thead>
 								<tbody>
 								<tr class="item">
-									<td>Post(s) (Personalizado) Redes Sociais<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+									<td>Post(s) Personalizado nas Redes Sociais<div class="toggle">+</div></td><td>-</td><td>1</td><td>2</td><td>3</td>
 						            <tr class="description"><td colspan="5" class="noPadding">
 						            	<div class="shadow">
-							            	<h3>Post(s) (Personalizado) Redes Sociais</h3>
+							            	<h3>Post(s) Personalizado nas Redes Sociais</h3>
 											<p>Colocação de um ou mais posts, personalizados de acordo com os critérios da empresa, nas redes sociais da SINFO.</p>
 										</div>
 						            </td></tr>
 								</tr>
 								<tr class="item alternate">
-									<td>Patrocinar Workshop<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+									<td>Patrocinar Workshop<div class="toggle">+</div></td><td>-</td><td>-</td><td>1</td><td>2</td>
 						            <tr class="description"><td colspan="5" class="noPadding">
 						            	<div class="shadow">
 							            	<h3>Patrocinar Workshop</h3>
@@ -199,7 +199,7 @@
 									</thead>
 									<tbody>
 									<tr class="item">
-										<td>Patrocinio de Palestra<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Patrocinio de Palestra<div class="toggle">+</div></td><td>-</td><td>-</td><td>-</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Patrocionio de Palestra</h3>
@@ -208,7 +208,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td>Apresentação<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Apresentação<div class="toggle">+</div></td><td>-</td><td>√</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Apresentação</h3>
@@ -229,7 +229,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td>Stand X dias Y Locais<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Stand X dias Y Locais<div class="toggle">+</div></td><td>-</td><td>1</td><td>2</td><td>3</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 								            <div class="shadow">
 								            	<h3>Stand X dias Y Locais </h3>
@@ -247,7 +247,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td>Dar Workshop<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Dar Workshop<div class="toggle">+</div></td><td>-</td><td>√</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Dar Workshop</h3>
@@ -256,7 +256,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td>Patrocinar Workshop<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Patrocinar Workshop<div class="toggle">+</div></td><td>-</td><td>√</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Patrocinar Workshop</h3><p>Patrocínio de um dos Workshops organizados pela SINFO durante o evento.</p>
@@ -264,16 +264,16 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td>Post(s) (Personalizado) Redes Sociais<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Post(s) Personalizado nas Redes Sociais<div class="toggle">+</div></td><td>-</td><td>1</td><td>2</td><td>3</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Post(s) (Personalizado) Redes Sociais</h3>
+								            	<h3>Post(s) Personalizado nas Redes Sociais</h3>
 												<p>Colocação de um ou mais posts, personalizados de acordo com os critérios da empresa, nas redes sociais da SINFO.</p>
 											</div>
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td>Pitch in-between talks<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Pitch in-between talks<div class="toggle">+</div></td><td>-</td><td>√</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Pitch in-between talks</h3>
@@ -282,7 +282,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td>Actividade personalizada<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Actividade personalizada<div class="toggle">+</div></td><td>-</td><td>-</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Actividade personalizada</h3>
@@ -291,7 +291,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td>Meetup ao final do dia<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Meetup ao final do dia<div class="toggle">+</div></td><td>-</td><td>√</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Meetup ao final do dia</h3>
@@ -323,7 +323,7 @@
 									</tbody>
 								</table>
 							</div>
-							<div class="heading">Publicadade<div class="toggle">+</div></div>
+							<div class="heading">Publicidade<div class="toggle">+</div></div>
 							<div class="content">
 								<div class="PackageContent">Package Content</div>
 								<table class="all-100">
@@ -348,7 +348,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td>Post(s) on Social Networks<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Post(s) on Social Networks<div class="toggle">+</div></td><td>-</td><td>1</td><td>2</td><td>3</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Post(s) on Social Networks</h3>
@@ -462,7 +462,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td>Personalized ad<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Personalized ad<div class="toggle">+</div></td><td>-</td><td>-</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Personalized ad</h3>
@@ -471,7 +471,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td>Logo on pens<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Logo on pens<div class="toggle">+</div></td><td>-</td><td>-</td><td>-</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Logo on pens</h3>
@@ -480,7 +480,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td>Logo on merchandise<div class="toggle">+</div></td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td>Logo on merchandise<div class="toggle">+</div></td><td>-</td><td>-</td><td>-</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Logo on merchandise</h3>
@@ -539,19 +539,6 @@
 					<div class="all-80 medium-90 small-100 tiny-100 container">
 						<div class="heading">Main Event <div class="toggle">+</div></div>
 						<div class="content">
-							<div class="PackageContent">Package Content</div>
-							<div class="indPack">Pack 1</div>
-							<div class="indPackDescription">
-								<ul>
-									<li>Workshop</li>
-									<li>Presentation</li>
-									<li>Keynote sponsor</li>
-									<li>Posts on Social Networks</li>
-									<li>Documentation on folders</li>
-									<li>Innovation Awards sponsorship</li>
-								</ul>
-							</div>
-							<div class="indPack">Pack 2</div>
 							<div class="indPackDescription">
 								<ul>
 									<li>Workshop</li>
@@ -567,8 +554,6 @@
 					<div class="all-80 medium-90 small-100 tiny-100 container">
 						<div class="heading">Publicidade<div class="toggle">+</div></div>
 						<div class="content">
-							<div class="PackageContent">Package Content</div>
-							<div class="indPack">Pack 1</div>
 							<div class="indPackDescription">
 								<ul>
 									<li>Logo in our site</li>
