Moved perks to bottom

--- a/sponsor.html
+++ b/sponsor.html
@@ -124,7 +124,7 @@
 					<h2>Sponsorship conditions</h2>
 					<h3>Packages</h3>
 
-					<div class="all-80 medium-90 small-100 tiny-100 container">
+					<div class="container">
 						<div class="heading"><div class="toggle">+</div>Anual</div>
 						<div class="content">
 							<div class="PackageContent">Package Content</div>
@@ -166,6 +166,12 @@
 										</div>
 						            </td></tr>
 								</tr>
+								<tr class="price">
+									<td>Price</td><td>5€</td><td>5€</td><td>5€</td><td>5€</td>
+								</tr>
+								<tr class="alterprice">
+									<td>Individual Price</td><td>10€</td><td>10€</td><td>10€</td><td>10€</td>
+								</tr>
 								<tr class="perks">
 									<td colspan="5"><h3>Perks</h3></td>
 								</tr>
@@ -174,12 +180,6 @@
 										<p>Jantar com membros da comissão/finalistas - Possibilidade de realizar um jantar privado com diversos membros da comissão de acordo com os interesses da empresa.</p>
 										<p>Currículos - Entrega dos currículos submetidos pelos alunos a todas as empresas participantes no evento.</p>
 									</td>
-								</tr>
-								<tr class="price">
-									<td>Price</td><td>5€</td><td>5€</td><td>5€</td><td>5€</td>
-								</tr>
-								<tr class="alterprice">
-									<td>Individual Price</td><td>10€</td><td>10€</td><td>10€</td><td>10€</td>
 								</tr>
 								</tbody>
 							</table>
@@ -299,6 +299,12 @@
 											</div>
 							            </td></tr>
 									</tr>
+									<tr class="price">
+										<td>Price</td><td>5€</td><td>5€</td><td>5€</td><td>5€</td>
+									</tr>
+									<tr class="alterprice">
+										<td>Individual Price</td><td>10€</td><td>10€</td><td>10€</td><td>10€</td>
+									</tr>
 									<tr class="perks">
 										<td colspan="5"><h3>Perks</h3></td>
 									</tr>
@@ -313,12 +319,6 @@
 											<p>Jantar com membros da comissão/finalistas - Possibilidade de realizar um jantar privado com diversos membros da comissão de acordo com os interesses da empresa.</p>
 											<p>Currículos - Entrega dos currículos submetidos pelos alunos a todas as empresas participantes no evento.</p>
 										</td>
-									</tr>
-									<tr class="price">
-										<td>Price</td><td>5€</td><td>5€</td><td>5€</td><td>5€</td>
-									</tr>
-									<tr class="alterprice">
-										<td>Individual Price</td><td>10€</td><td>10€</td><td>10€</td><td>10€</td>
 									</tr>
 									</tbody>
 								</table>
@@ -536,7 +536,7 @@
 					<h3>Individual items</h3>
 					<p>The following items can be purchased individually. For more info on prices associated with these elements, contact the committee member assigned to contact your company.</p>
 
-					<div class="all-80 medium-90 small-100 tiny-100 container">
+					<div class="container">
 						<div class="heading">Main Event <div class="toggle">+</div></div>
 						<div class="content">
 							<div class="indPackDescription">
@@ -551,7 +551,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="all-80 medium-90 small-100 tiny-100 container">
+					<div class="container">
 						<div class="heading">Publicidade<div class="toggle">+</div></div>
 						<div class="content">
 							<div class="indPackDescription">
