Changed description to Item on every table

--- a/sponsor.html
+++ b/sponsor.html
@@ -131,7 +131,7 @@
 							<table class="all-100 medium-100 small-100 tiny-100">
 								<thead>
 									<tr>
-				            <th class="all-40">Description</th>
+				            <th class="all-40">Item</th>
 				            <th class="all-15">Sponsor</th>
 				            <th class="all-15">Partner</th>
 				            <th class="all-15">Premium</th>
@@ -190,7 +190,7 @@
 								<table class="all-100">
 									<thead>
 										<tr>
-								            <th class="all-40">Description</th>
+								            <th class="all-40">Item</th>
 								            <th class="all-15">Silver</th>
 								            <th class="all-15">Gold</th>
 								            <th class="all-15">Platinum</th>
@@ -329,11 +329,11 @@
 								<table class="all-100">
 									<thead>
 										<tr>
-								            <th class="all-40">Description</th>
-								            <th class="all-15">Baixa</th>
-								            <th class="all-15">Média</th>
-								            <th class="all-15">Alta</th>
-								            <th class="all-15">Exclusiva</th>
+					            <th class="all-40">Item</th>
+					            <th class="all-15">Baixa</th>
+					            <th class="all-15">Média</th>
+					            <th class="all-15">Alta</th>
+					            <th class="all-15">Exclusiva</th>
 										</tr>
 									</thead>
 									<tbody>
