--- a/sponsor.html
+++ b/sponsor.html
@@ -59,7 +59,7 @@
 			<nav class="ink-navigation ink-grid hide-small hide-tiny ie7">
 				<ul class="menu horizontal flat black shadowed">
 					<li>
-						<a class="logoPlaceholder" href="#" title="SINFO">Sponsor  <img src="img/logotext.png"></a>
+						<a class="logoPlaceholder" href="#" title="SINFO">Sponsor  <img src="img/logo.png"></a>
 					</li>
 					<li><a href="#description">Description</a></li>
 					<li><a href="#reasons">Reasons to sponsor</a></li>
